<resources>
    <string name="app_name">Pharma App</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">La dirección de correo es inválida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Es necesario otorgar permisos para acceder al correo"
    </string>

    <string name="lbl_olvido_clave">¿Olvido la contraseña?</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btn_registrar_visita">Registrar Visita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--placeolder-->
    <string name="placeholder_name">Nombre</string>
    <string name="placeholder_puesto">Especialidad (cardiologo,..)</string>
    <string name="placeholder_hospital">Clinica/hospital</string>
    <string name="placeholder_correo">Correo electrónico</string>
    <string name="placeholder_direccion">Dirección</string>
    <string name="placeholder_disponibilidad">Disponibilidad</string>
    <string name="placeholder_hora_inicio">Hora Incio</string>
    <string name="placeholder_hora_fin">Hora Fin</string>
    <string name="placeholder_semana">Día de la semana</string>
    <string name="placeholder_producto">Producto</string>
    <string name="placeholder_necesidad_cliente">Necesidad cliente</string>
    <string name="placeholder_necesidad_paciente">Necesidad paciente</string>
    <string name="placeholder_comentario_visita">Comentario visita</string>
    <string name="placeholder_comentario_producto">Comentario producto</string>

    <!--name buttons-->
    <string name="btn_register">Registrar</string>
    <string name="btn_selector_direction">Seleccionar dirección</string>
    <string name="title_activity_direccion_map">DIreccion cliente</string>
    <string name="btn_guardar_disponibilidad">Guardar</string>
    <string name="btn_guardar">Guardar</string>

    <!--variables preferences-->
    <string name="preferences_file">preferences</string>
    <string name="preferences_latitud_cliente">latitud_cliente</string>
    <string name="preferences_longitud_cliente">longitud_cliente</string>
    <string name="preferences_direccion_cliente">direccion_cliente</string>

    <!--check-->
    <string name="chk_lunes">Lunes</string>
    <string name="chk_martes">Martes</string>
    <string name="chk_miercoles">Miércoles</string>
    <string name="chk_jueves">Jueves</string>
    <string name="chk_viernes">Viernes</string>
    <string name="chk_sabado">Sábado</string>

    <!--errores o advertencias-->
    <string name="error_ingrese_hora">Ingrese hora</string>
    <string name="error_usuario_clave">Usuario o contraseña incorrectos</string>
    <string name="error_service">Ocurrió un error en nuestro servidor</string>
    <string name="error_empty_medicos">No hay medicos disponible en la fecha seleccionada</string>

    <!--Loaders-->
    <string name="loader_login">Iniciando sesión</string>
    <string name="loader_searching_medicos">Buscando médicos...</string>

    <string-array name="array_place">
        <item>Bangalore</item>
        <item>Tokyo</item>
        <item>New York</item>
    </string-array>
    <string name="title_activity_registrar_cliente">RegistrarClienteActivity</string>

</resources>

