<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.tincio.pharmaapp.presentation.activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@mipmap/img_login"
                            android:scaleType="centerCrop"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white">

                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:src="@mipmap/ic_app" />

                <!--data-->
                <!--    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="40dp">-->
                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cardview_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginBottom="80dp"
                    android:layout_marginEnd="@dimen/margin_login"
                    android:layout_marginLeft="@dimen/margin_login"
                    android:layout_marginRight="@dimen/margin_login"
                    android:layout_marginStart="@dimen/margin_login"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/margin_default"
                        android:layout_marginEnd="@dimen/margin_default"
                        android:layout_marginTop="@dimen/margin_default"
                        android:paddingBottom="60dp"
                        android:orientation="vertical">

                        <com.tincio.pharmaapp.presentation.customview.TextViewLightGeneral
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="20sp"
                            android:layout_marginBottom="@dimen/margin_default"
                            android:text="@string/app_name"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp">

                            <com.tincio.pharmaapp.presentation.customview.AutoCompleteTextLightGeneral
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="6"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <com.tincio.pharmaapp.presentation.customview.TextViewLightGeneral
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_olvido_clave"
                    android:textSize="16sp"
                    android:textColor="@color/grey_main"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="20dp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="250dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cardview_login"
        android:layout_marginEnd="@dimen/margin_login"
        android:layout_marginLeft="@dimen/margin_login"
        android:layout_marginRight="@dimen/margin_login"
        android:layout_marginStart="@dimen/margin_login"
        android:background="@drawable/selector_button"
        android:text="@string/action_sign_in"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_anchor="@id/cardview_login"
        app:layout_anchorGravity="bottom|center" />

</android.support.design.widget.CoordinatorLayout>
