<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="vertical">
            <!--Lunes-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_bottom_input"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_lunes"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/chk_lunes"
                    android:text="@string/chk_lunes" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:id="@+id/txt_horainicio_lunes"
                            android:layout_width="wrap_content"
                            android:focusable="false"
                            android:layout_weight="2"
                            android:drawableTint="@color/grey_dark"
                            android:hint="@string/placeholder_hora_inicio"
                            android:drawableEnd="@drawable/ic_schedule_black_24dp"
                            />

                    </LinearLayout>
                    <!--hora fin-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:layout_width="wrap_content"
                            android:id="@+id/txt_horafin_lunes"
                            
                            android:layout_weight="2"
                            
                            
                            android:hint="@string/placeholder_hora_fin"
                             />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!--martes-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_bottom_input"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_martes"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/chk_martes"
                    android:text="@string/chk_martes" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:id="@+id/txt_horainicio_martes"
                            android:layout_width="wrap_content"
                            
                            android:layout_weight="2"
                            android:drawableTint="@color/grey_dark"
                            
                            android:hint="@string/placeholder_hora_inicio"
                            android:drawableEnd="@drawable/ic_schedule_black_24dp"
                             />

                    </LinearLayout>
                    <!--hora fin-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:layout_width="wrap_content"
                            android:id="@+id/txt_horafin_martes"
                            android:layout_weight="2"
                            android:hint="@string/placeholder_hora_fin"
                             />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!--miercoles-->
            <!--martes-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_bottom_input"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_miercoles"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/chk_miercoles"
                    android:text="@string/chk_miercoles" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:id="@+id/txt_horainicio_miercoles"
                            android:layout_width="wrap_content"
                            
                            android:layout_weight="2"
                            android:drawableTint="@color/grey_dark"
                            
                            android:hint="@string/placeholder_hora_inicio"
                            android:drawableEnd="@drawable/ic_schedule_black_24dp"
                             />

                    </LinearLayout>
                    <!--hora fin-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:layout_width="wrap_content"
                            android:id="@+id/txt_horafin_miercoles"
                            
                            android:layout_weight="2"
                            
                            
                            android:hint="@string/placeholder_hora_fin"
                             />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!--jueves-->
            <!--martes-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_bottom_input"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_jueves"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/chk_jueves"
                    android:text="@string/chk_jueves" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:id="@+id/txt_horainicio_jueves"
                            android:layout_width="wrap_content"
                            
                            android:layout_weight="2"
                            android:drawableTint="@color/grey_dark"
                            
                            android:hint="@string/placeholder_hora_inicio"
                            android:drawableEnd="@drawable/ic_schedule_black_24dp"
                             />

                    </LinearLayout>
                    <!--hora fin-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:layout_width="wrap_content"
                            android:id="@+id/txt_horafin_jueves"
                            
                            android:layout_weight="2"
                            
                            
                            android:hint="@string/placeholder_hora_fin"
                             />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!--viernes-->
            <!--martes-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_bottom_input"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_viernes"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/chk_viernes"
                    android:text="@string/chk_viernes" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:id="@+id/txt_horainicio_viernes"
                            android:layout_width="wrap_content"
                            
                            android:layout_weight="2"
                            android:drawableTint="@color/grey_dark"
                            
                            android:hint="@string/placeholder_hora_inicio"
                            android:drawableEnd="@drawable/ic_schedule_black_24dp"
                             />

                    </LinearLayout>
                    <!--hora fin-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:layout_width="wrap_content"
                            android:id="@+id/txt_horafin_viernes"
                            
                            android:layout_weight="2"
                            
                            
                            android:hint="@string/placeholder_hora_fin"
                             />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!--sabado-->
            <!--martes-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_bottom_input"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_sabado"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/chk_sabado"
                    android:text="@string/chk_sabado" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:id="@+id/txt_horainicio_sabado"
                            android:layout_width="wrap_content"
                            
                            android:layout_weight="2"
                            android:drawableTint="@color/grey_dark"
                            
                            android:hint="@string/placeholder_hora_inicio"
                            android:drawableEnd="@drawable/ic_schedule_black_24dp"
                             />

                    </LinearLayout>
                    <!--hora fin-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.tincio.pharmaapp.presentation.customview.EditTextLightGeneral
                            style="@style/AppTheme.EditTextGeneralStyle.Disponibilidad"
                            android:layout_width="wrap_content"
                            android:id="@+id/txt_horafin_sabado"
                            
                            android:layout_weight="2"
                            
                            
                            android:hint="@string/placeholder_hora_fin"
                             />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:paddingTop="@dimen/margin_default"
                android:paddingBottom="@dimen/margin_default"
                android:gravity="bottom"
                >
                <Button
                    android:id="@+id/btn_guardar_disponibilidad"
                    style="@style/AppTheme.ButtonGeneralStyle"
                    android:text="@string/btn_guardar_disponibilidad" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>